Added Special slots for Month View. (#408)
* Apply a fix for the layout of the time ruler for latest versions of windows.

* Return old logic.

* Initial implementation of the special slots for monthview.

* Make Month cell style context for further usage in style selector.

* Initial implementation of the special slots for month.

* Handle selection when cell is read only due to its slot.

* Added content template for the special slots in the multiday view.

* Fix stylecop errors.

* Small code refactoring.

* Small code improvement.

* Various fixes for the Calendar and added example for the special slots in the Month view.

* Remove irrelevant code.

* Set default styles event if there is month view settings.

--- a/Controls/Primitives/Primitives.UWP/Primitives.UWP.csproj
+++ b/Controls/Primitives/Primitives.UWP/Primitives.UWP.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Common\Controls\AutomationPeers\RadContentControlAutomationPeer.cs" />
     <Compile Include="Common\Controls\AutomationPeers\RadControlAutomationPeer.cs" />
     <Compile Include="Common\Controls\AutomationPeers\RadHeaderedControlAutomationPeer.cs" />
+    <Compile Include="Common\StyleManager.cs" />
     <Compile Include="ExpanderControl\RadExpanderControlAutomationPeer.cs" />
     <Compile Include="HubTile\AutomationPeers\FlipControlAutomationPeer.cs" />
     <Compile Include="HubTile\AutomationPeers\HubTileBaseAutomationPeer.cs" />
