WIP Prepare the calendar for agenda view - make the navigation header work.

--- a/SDKExamples.UWP/SDKExamples.UWP.csproj
+++ b/SDKExamples.UWP/SDKExamples.UWP.csproj
@@ -96,12 +96,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Examples\Map\Shapes\world.dbf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Examples\Map\Shapes\world.shp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -137,6 +131,9 @@
     </Compile>
     <Compile Include="Examples\BusyIndicator\CustomAnimation.xaml.cs">
       <DependentUpon>CustomAnimation.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Examples\Calendar\AgendaView.xaml.cs">
+      <DependentUpon>AgendaView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Examples\Calendar\BlackoutCells.xaml.cs">
       <DependentUpon>BlackoutCells.xaml</DependentUpon>
@@ -382,9 +379,6 @@
     <Compile Include="Examples\LoopingList\Customizations.xaml.cs">
       <DependentUpon>Customizations.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Examples\Map\GettingStarted.xaml.cs">
-      <DependentUpon>GettingStarted.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Examples\NumericBox\Configurations.xaml.cs">
       <DependentUpon>Configurations.xaml</DependentUpon>
     </Compile>
@@ -519,6 +513,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Examples\BusyIndicator\CustomAnimation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Examples\Calendar\AgendaView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -838,10 +836,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Examples\Map\GettingStarted.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Examples\NumericBox\Configurations.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -933,12 +927,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Binaries\Telerik.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Telerik.Geospatial.UWP">
-      <HintPath>..\Binaries\Telerik.Geospatial.UWP.dll</HintPath>
-    </Reference>
-    <Reference Include="Telerik.UI.Drawing">
-      <HintPath>..\Binaries\x86\Telerik.UI.Drawing.winmd</HintPath>
-    </Reference>
     <Reference Include="Telerik.UI.Xaml.Chart.UWP">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Binaries\Telerik.UI.Xaml.Chart.UWP.dll</HintPath>
@@ -958,9 +946,6 @@
     <Reference Include="Telerik.UI.Xaml.Input.UWP">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Binaries\Telerik.UI.Xaml.Input.UWP.dll</HintPath>
-    </Reference>
-    <Reference Include="Telerik.UI.Xaml.Map.UWP">
-      <HintPath>..\Binaries\x86\Telerik.UI.Xaml.Map.UWP.dll</HintPath>
     </Reference>
     <Reference Include="Telerik.UI.Xaml.Primitives.UWP">
       <SpecificVersion>False</SpecificVersion>
