--- a/Controls/Input/Input.UWP/Input.UWP.csproj
+++ b/Controls/Input/Input.UWP/Input.UWP.csproj
@@ -72,7 +72,11 @@
     <Compile Include="Calendar\Model\CalendarMultiDayViewModel.cs" />
     <Compile Include="Calendar\Model\ICopyable.cs" />
     <Compile Include="Calendar\Model\Slot.cs" />
+    <Compile Include="Calendar\View\AgendaView\AgendaDayItem.cs" />
     <Compile Include="Calendar\View\AgendaView\AgendaViewSettings.cs" />
+    <Compile Include="Calendar\View\AgendaView\AgendaItem.cs" />
+    <Compile Include="Calendar\View\AgendaView\AgendaAppointmentItem.cs" />
+    <Compile Include="Calendar\View\AgendaView\AgendaItemTemplateSelector.cs" />
     <Compile Include="Calendar\View\CalendarFooterControl.cs" />
     <Compile Include="Calendar\View\Layers\XamlAgendaViewLayer.cs" />
     <Compile Include="Calendar\View\Layers\XamlAllDayAreaLayer.cs" />
@@ -122,6 +126,10 @@
       <SubType>Designer</SubType>
     </Page>
     <EmbeddedResource Include="Themes\DefaultCalendarTimerRulerResources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Themes\DefaultAgendaViewResources.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
