--- a/BuildTools/Nuspecs.UWP/Package.UniversalWindowsPlatform.nuspec
+++ b/BuildTools/Nuspecs.UWP/Package.UniversalWindowsPlatform.nuspec
@@ -14,13 +14,14 @@
 		<releaseNotes>For full release notes see https://github.com/telerik/UI-For-UWP/releases/tag/1.0.2.6</releaseNotes>
 		<tags>UWP Windows Telerik Controls XAML C#</tags>
         <language>en-US</language>
+        <repository type="git" url="https://github.com/zateutsch/UI-For-UWP"/>
     </metadata>
     <files>
         <file src="$DeployDirectory$\$BinariesSubDir$\**" target="lib\uap10.0" exclude="$DeployDirectory$\$BinariesSubDir$\ARM\**;$DeployDirectory$\$BinariesSubDir$\ARM64\**;DeployDirectory$\$BinariesSubDir$\x86\**;$DeployDirectory$\$BinariesSubDir$\x64\**"/>
-        <file src="$DeployDirectory$\$BinariesSubDir$\ARM\**\*" target="lib\uap10.0\ARM"/>
+        <!-- <file src="$DeployDirectory$\$BinariesSubDir$\ARM\**\*" target="lib\uap10.0\ARM"/>
         <file src="$DeployDirectory$\$BinariesSubDir$\ARM64\**\*" target="lib\uap10.0\ARM64"/>
         <file src="$DeployDirectory$\$BinariesSubDir$\x86\**\*" target="lib\uap10.0\x86"/>
-        <file src="$DeployDirectory$\$BinariesSubDir$\x64\**\*" target="lib\uap10.0\x64"/>
+        <file src="$DeployDirectory$\$BinariesSubDir$\x64\**\*" target="lib\uap10.0\x64"/> -->
         <file src="$NuspecsDir$\$Id$.targets" target="build\uap10.0"/>
 		<file src="$NuspecsDir$\VisualStudioToolsManifest.xml" target="tools"/>
         <file src="$DeployDirectory$\License.md" target="LicenseAgreements" />
