--- a/BuildTools/Nuspecs.UWP/Package.UniversalWindowsPlatform.nuspec
+++ b/BuildTools/Nuspecs.UWP/Package.UniversalWindowsPlatform.nuspec
@@ -10,8 +10,7 @@
         <licenseUrl>https://github.com/telerik/UI-For-UWP/blob/master/LICENSE.md</licenseUrl>
         <iconUrl>http://www.telerik.com/docs/default-source/nuget-feed-product-files/nugeticon_uwp.png?sfvrsn=2</iconUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <description>UI for Universal Windows Platform is a toolset for building Universal Windows Platform apps for the Windows Store and the enterprise. The library is designed to offer the same user experience, functionality and behavior on Windows devices of all form factors.</description>
-		<releaseNotes>For full release notes see https://github.com/telerik/UI-For-UWP/releases/tag/1.0.2.6</releaseNotes>
+        <description>Personal Fork of Telerik's UI-For-UWP, for use in zateutsch/ML-Playground</description>
 		<tags>UWP Windows Telerik Controls XAML C#</tags>
         <language>en-US</language>
         <repository type="git" url="https://github.com/zateutsch/UI-For-UWP"/>
